# ADIS16505_RPi

./: ADIS16505.h  CMakeLists.txt  README.md  RecordData.cpp  Spi.cpp  Spi.h  test.cpp  testADI.cpp  testWiringPi.cpp
include/: ADIS16505.h  ADIS16505.hpp  RegisterMap.h  Spi.h
src/: testBorL.cpp
